# llm-gateway

./: .coverage  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_CHECKLIST.md  SECURITY.md  benchmark-ci-results.json  pyproject.toml
.github/workflows/: ci.yml  integration.yml
arcllm/: __init__.py  core.py  exceptions.py  types.py
arcllm/capabilities/: __init__.py  tables.py
arcllm/http/: __init__.py  async_client.py  client.py
arcllm/pricing/: __init__.py  tables.py
arcllm/providers/: __init__.py  anthropic_adapter.py  azure_adapter.py  base.py  bedrock_adapter.py  cohere_adapter.py  databricks_adapter.py  deepseek_adapter.py  fireworks_adapter.py  gemini_adapter.py  groq_adapter.py  mistral_adapter.py  ollama_adapter.py  openai_adapter.py  perplexity_adapter.py  together_adapter.py  vertex_adapter.py
benchmarks/: benchmark.py  benchmark_ci.py
docs/: ADDING_A_PROVIDER.md  PERF.md  provider_model_matrix.md
docs/providers/: CAPABILITIES.md  README.md  anthropic.md  gemini.md  openai.md
examples/: embeddings.py  simple_completion.py  streaming.py  structured_output.py  tool_calling.py
fastlitellm/: __init__.py  core.py  exceptions.py  types.py
fastlitellm/capabilities/: __init__.py
fastlitellm/http/: __init__.py  async_client.py  client.py  sse.py
fastlitellm/pricing/: __init__.py  tables.py
fastlitellm/providers/: __init__.py  anthropic_adapter.py  azure_adapter.py  base.py  bedrock_adapter.py  cohere_adapter.py  databricks_adapter.py  deepseek_adapter.py  fireworks_adapter.py  gemini_adapter.py  groq_adapter.py  mistral_adapter.py  ollama_adapter.py  openai_adapter.py  perplexity_adapter.py  together_adapter.py  vertex_adapter.py
notes/: IMPLEMENTATION_NOTES.md
tests/: __init__.py  conftest.py  test_async_client.py  test_capabilities.py  test_capabilities_extended.py  test_core.py  test_core_async.py  test_exceptions.py  test_http_client.py  test_pricing.py  test_pricing_comprehensive.py  test_providers_extended.py  test_sse.py  test_streaming_comprehensive.py  test_streaming_stress.py  test_types.py  test_types_comprehensive.py  utils.py
tests/fixtures/: __init__.py  responses.py
tests/integration/: __init__.py  base.py  test_anthropic_integration.py  test_openai_integration.py
tests/providers/: __init__.py  test_anthropic.py  test_gemini.py  test_openai.py  test_providers_common.py
