[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arcllm"
version = "0.1.0"
description = "The arc connecting you to every LLM. Zero dependencies, maximum performance."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [
    { name = "ArcLLM Contributors" }
]
keywords = ["llm", "openai", "anthropic", "gemini", "claude", "gpt", "ai", "api", "gateway", "unified", "multi-provider"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

# ZERO runtime dependencies - stdlib only
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-timeout>=2.3.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pyright>=1.1.390",
    "coverage>=7.6.0",
]

[project.urls]
Homepage = "https://github.com/arcllm/arcllm"
Documentation = "https://github.com/arcllm/arcllm#readme"
Repository = "https://github.com/arcllm/arcllm"
Issues = "https://github.com/arcllm/arcllm/issues"

[tool.hatch.build.targets.wheel]
packages = ["arcllm"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
]

[tool.ruff.lint.isort]
known-first-party = ["arcllm"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["arcllm"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
# Omit provider adapters that are thin wrappers with similar patterns
# These adapters follow the same pattern as OpenAI and can be tested
# via integration tests with real API calls
omit = [
    "arcllm/providers/bedrock_adapter.py",
    "arcllm/providers/cohere_adapter.py",
    "arcllm/providers/databricks_adapter.py",
    "arcllm/providers/ollama_adapter.py",
    "arcllm/providers/vertex_adapter.py",
    "arcllm/providers/azure_adapter.py",
    "arcllm/providers/mistral_adapter.py",
    # Async client networking code is better tested via integration
    "arcllm/http/async_client.py",
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedClass = true
reportUnusedFunction = true
reportUnusedVariable = true
reportDuplicateImport = true
reportPrivateUsage = true
reportConstantRedefinition = true
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true
reportInconsistentConstructor = true
reportUntypedFunctionDecorator = true
reportUntypedClassDecorator = true
reportUntypedBaseClass = true
reportUntypedNamedTuple = true
reportCallInDefaultInitializer = false
reportImplicitStringConcatenation = false
reportMissingSuperCall = false
